--- a/css/post.css
+++ b/css/post.css
@@ -12,7 +12,11 @@
 
 body {
   font-family: "Nunito", sans-serif;
-  font-size: 1.25rem;
+  font-size: 1.1rem;
+}
+
+#note {
+  color: #0085a1;;
 }
 
 header {
